Release 2.0-1:
  * Fixed incorrect pop/popback behavior.

Release 2.0-0:
  * Added queues and stacks.
  * Fixed segfault in combine()
  * Re-wrote README.
  * Refactored internals.
  * Improved documentation.

Release 1.0-0:
  * Added support for deques and basic deque operations.